<resources>
    <string name="app_name">VolleyInAndroid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_add">Add</string>
    <string name="btn_show">Show</string>
    <string name="txt_title">Student Management System</string>
    <string name="txt_title_name">Name: </string>
    <string name="txt_title_age">Age: </string>
    <string name="btn_change">Change</string>
</resources>
