<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/txt_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/btn_add" />

    <Button
        android:id="@+id/btnShow"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAdd"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/btn_show" />

</RelativeLayout>
