<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txtTitleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/txt_title_name"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/txtInputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitleName" />

    <TextView
        android:id="@+id/txtTitleAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInputName"
        android:padding="5dp"
        android:text="@string/txt_title_age"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/txtInputAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitleAge" />

    <Button
        android:id="@+id/btnAddNewStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInputAge"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_add" />
</RelativeLayout>
